DELETE /api/import/user/{userId}/{period} + POST /api/import/user/{userId} + GET /api/report/user/{userId}/export